--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -34,10 +34,9 @@ body {
   line-height: 1;
   padding: 0 100px;
   background-color: #232326;
-  font-family: 'Catamaran', sans-serif;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  font-family: "Catamaran", sans-serif;
   display: flex;
+  color: #D7D7DB;
 }
 
 header {
@@ -47,50 +46,37 @@ header {
   color: #D7D7DB;
   position: relative;
 }
-
 header .logo {
   padding: 10px 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
+  align-items: center;
+  justify-content: start;
 }
-
 header .logo img {
   width: 70px;
   border-radius: 50%;
   background-color: #bc8aea;
 }
-
 header .logo .title {
-  margin-left: 20px;
+  margin-left: 15px;
+  margin-top: 8px;
 }
-
-header .logo .title h3 {
+header .logo .title span {
   font-size: 1.2rem;
   font-weight: bold;
 }
-
 header .logo .title p {
-  font-size: .8rem;
+  font-size: 0.8rem;
   margin: 5px 0;
 }
-
 header nav {
   margin-top: 25px;
-  margin-left: 15px;
+  margin-left: 16px;
 }
-
 header nav ul li {
   padding: 10px;
   margin: 3px 0;
 }
-
 header nav ul li a {
   font-size: 1rem;
   color: #D7D7DB;
@@ -98,25 +84,22 @@ header nav ul li a {
   padding: 3px 8px;
   border-radius: 7px;
 }
-
 header nav ul li a:hover {
   color: #fff;
   background-color: #2f2f2fc1;
 }
-
 header nav ul li .active {
   color: #fff;
   background-color: #2f2f2fc1;
 }
-
 header .signature {
   position: absolute;
   bottom: 10px;
-  left: 15px;
-  font-size: .9rem;
+  left: 45px;
+  font-size: 0.9rem;
   line-height: 1.5;
   background-color: #2f2f2fc1;
-  padding: 7px 10px;
+  padding: 8px 10px;
   border-radius: 5px;
   text-align: center;
 }
@@ -126,50 +109,57 @@ main {
   margin-left: 15px;
   width: 55vw;
 }
-
 main .buttons {
   padding: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 main .buttons button {
   background-color: transparent;
   border: 0;
   font-size: 1.5rem;
   cursor: pointer;
 }
-
 main .buttons .font-icons {
   margin-left: 30px;
   fill: #D7D7DB;
 }
-
 main .container {
   margin-top: 50px;
 }
-
 main .container .content {
   margin: 50px 0;
 }
-
 main .container .content h2 {
   font-size: 1.3rem;
   color: #fafafa;
   margin-bottom: 10px;
 }
-
 main .container .content span {
   color: #71717A;
+}
+main .container h1 {
+  font-size: 2rem;
+}
+main .container .welcome {
+  font-size: 1.5rem;
+  margin-top: 20px;
+  color: #A1A1A9;
+}
+main .container .social-button {
+  padding: 10px 10px;
+  border-radius: 7px;
+  background-color: #1f1f21;
+  text-decoration: none;
+}
+main .container .social-button:hover {
+  background-color: rgba(31, 31, 33, 0.93);
 }
 
 .divider {
   width: 100%;
-  height: 3px;
+  height: 2px;
   background-color: #313136;
 }
+
 /*# sourceMappingURL=style.css.map */
