--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -49,6 +49,7 @@ $menu-hover: #2f2f2fc1;
 $divider-color: #313136;
 
 body {
+  -webkit-font-smoothing: antialiased;
   line-height: 1;
   padding: 0 100px;
   background-color: $bg-dark;
@@ -184,6 +185,7 @@ main {
   .container {
     margin-top: 50px;
     font-size: 16px;
+
     .content {
       margin: 50px 0;
 
@@ -202,36 +204,111 @@ main {
       font-size: 2em;
     }
 
-    .text{
-      .welcome {
+    h2 {
+      font-size: 1.5em;
+    }
+
+    .welcome {
+      p {
         font-size: 1.5em;
         margin-top: 20px;
         color: $light-text;
       }
+    }
 
-      .socials{
-        margin: 10px 0;
+    .socials {
+      margin: 10px 0;
 
-        a{
-          text-decoration: none;
-          svg{
-            width: 25px;
-            margin-right: 5px;
-            padding: 5px;
-            border: 2px solid $divider-color;
-            border-radius: 50%;
+      a {
+        text-decoration: none;
 
-            &:hover{
-              border-color: #3b3b3b;
-              path{
-                fill: #fff;
-              }
-            }
-            path{
-              fill: $text;
+        svg {
+          width: 25px;
+          margin-right: 5px;
+          padding: 5px;
+          border: 2px solid $divider-color;
+          border-radius: 50%;
+
+          &:hover {
+            border-color: #3b3b3b;
+
+            path {
+              fill: #fff;
             }
           }
+
+          path {
+            fill: $text;
+          }
         }
+      }
+    }
+
+    .date_list_block {
+      margin-top: 30px;
+
+      .item {
+        margin-top: 20px;
+        align-items: baseline;
+        box-sizing: border-box;
+        display: grid;
+        grid-template-columns: clamp(7em, 30vw, 1.5rem) 1fr;
+        margin-bottom: calc(.5 * 1.5em);
+        max-width: 50vw;
+
+        .label {
+          font-size: 1.1em;
+          box-sizing: border-box;
+          color: #797673;
+        }
+
+        p {
+          box-sizing: border-box;
+          font-size: 1.1em;
+          font-weight: 400;
+          margin: 0.5em 0;
+          max-width: 38rem;
+        }
+
+        h3 {
+          box-sizing: border-box;
+          color: #f8f6f5;
+          font-size: 1.5em;
+          font-weight: 500;
+          max-width: 38rem;
+        }
+
+        small {
+          box-sizing: border-box;
+          color: #797673;
+          font-size: .9em;
+          line-height: 1.5;
+        }
+      }
+    }
+
+    .project {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 20em 7em;
+      grid-auto-columns: 1fr;
+      grid-auto-rows: 1fr;
+      gap: 1.5em 0;
+      grid-auto-flow: row;
+      grid-template-areas:
+    "image"
+    "information";
+
+      .image {
+        height:20em;
+        grid-area: image;
+        border-radius: 3px;
+      }
+
+      .information {
+        margin-left: 10px;
+        align-self: stretch;
+        grid-area: information;
       }
     }
 
@@ -261,25 +338,30 @@ main {
   justify-content: center;
   z-index: 100;
   background-color: $bg-dark;
-  span[id=korisirbiz]{
+
+  span[id=korisirbiz] {
     color: $text;
     font-size: 14vmin !important;
     font-weight: 500 !important;
     letter-spacing: 2px !important;
   }
+
   .bottom {
     position: absolute;
     bottom: 4vmin !important;
     margin: 5px !important;
   }
+
   a.second {
     color: $light-text !important;
     font-weight: 500 !important;
     text-decoration: none;
   }
+
   span.first {
     bottom: 6vmin !important;
-    color: $text !important; }
+    color: $text !important;
+  }
 }
 
 
