--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -35,7 +35,9 @@ body {
   line-height: 1;
   padding: 0 100px;
   background-color: #232326;
-  font-family: "Catamaran", sans-serif;
+  font-family: 'Catamaran', sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   color: #D7D7DB;
 }
@@ -47,37 +49,51 @@ header {
   color: #D7D7DB;
   position: relative;
 }
+
 header .logo {
   padding: 10px 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
 }
+
 header .logo img {
   width: 70px;
   border-radius: 50%;
   background-color: #bc8aea;
 }
+
 header .logo .title {
   margin-left: 15px;
   margin-top: 8px;
 }
+
 header .logo .title span {
   font-size: 1.2rem;
   font-weight: bold;
 }
+
 header .logo .title p {
-  font-size: 0.8rem;
+  font-size: .8rem;
   margin: 5px 0;
 }
+
 header nav {
   margin-top: 25px;
   margin-left: 16px;
 }
+
 header nav ul li {
   padding: 10px;
   margin: 3px 0;
 }
+
 header nav ul li a {
   font-size: 1rem;
   color: #D7D7DB;
@@ -85,14 +101,17 @@ header nav ul li a {
   padding: 3px 8px;
   border-radius: 7px;
 }
+
 header nav ul li a:hover {
   color: #fff;
   background-color: #2f2f2fc1;
 }
+
 header nav ul li .active {
   color: #fff;
   background-color: #2f2f2fc1;
 }
+
 header .signature {
   position: absolute;
   bottom: 10px;
@@ -109,74 +128,180 @@ main {
   margin-top: 30px;
   margin-left: 15px;
   width: 55vw;
+  overflow-y: scroll;
 }
+
 main .buttons {
   padding: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 main .buttons button {
   background-color: transparent;
   border: 0;
   font-size: 1.5rem;
   cursor: pointer;
 }
+
 main .buttons button:focus {
   outline: none;
 }
+
 main .buttons button:hover {
   border-radius: 50%;
   background-color: #2f2f2fc1;
 }
-main .buttons .font-buttons {
-  margin-left: 30px;
-  fill: #D7D7DB;
-  display: flex;
+
+main .buttons .spotify:hover {
+  background-color: transparent;
 }
-main .buttons .font-buttons button {
-  border-radius: 0.5rem;
-  box-sizing: border-box;
+
+main .buttons .font-buttons {
+  fill: #D7D7DB;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+main .buttons .font-buttons button {
+  border-radius: .5rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 2.25rem;
   width: 2.25rem;
 }
+
 main .buttons .font-buttons button:hover {
   border-radius: 10%;
 }
+
+main .buttons .buttons-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .buttons .buttons-right .font-buttons {
+  width: 100px;
+  margin-left: 10px;
+  fill: #D7D7DB;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+main .buttons .buttons-right .font-buttons button {
+  border-radius: .5rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 2.25rem;
+  width: 2.25rem;
+}
+
+main .buttons .buttons-right .font-buttons button:hover {
+  border-radius: 10%;
+}
+
+main .buttons .buttons-right .icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+main .buttons .buttons-right .icons button {
+  border-radius: .5rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 2.25rem;
+  width: 2.25rem;
+}
+
+main .buttons .buttons-right .icons button:hover {
+  border-radius: 10%;
+}
+
 main .container {
   margin-top: 50px;
   font-size: 16px;
 }
+
 main .container .content {
   margin: 50px 0;
 }
+
 main .container .content h2 {
   font-size: 1.3em;
   color: #fafafa;
   margin-bottom: 10px;
 }
+
 main .container .content span {
   color: #71717A;
 }
+
 main .container h1 {
   font-size: 2em;
 }
+
 main .container h2 {
   font-size: 1.5em;
 }
+
 main .container .welcome p {
   font-size: 1.5em;
   margin-top: 20px;
   color: #A1A1A9;
 }
+
 main .container .socials {
   margin: 10px 0;
 }
+
 main .container .socials a {
   text-decoration: none;
 }
+
 main .container .socials a svg {
   width: 25px;
   margin-right: 5px;
@@ -184,80 +309,117 @@ main .container .socials a svg {
   border: 2px solid #313136;
   border-radius: 50%;
 }
+
 main .container .socials a svg:hover {
   border-color: #3b3b3b;
 }
+
 main .container .socials a svg:hover path {
   fill: #fff;
 }
+
 main .container .socials a svg path {
   fill: #D7D7DB;
 }
+
 main .container .date_list_block {
   margin-top: 30px;
 }
+
 main .container .date_list_block .item {
   margin-top: 20px;
-  align-items: baseline;
-  box-sizing: border-box;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: clamp(7em, 30vw, 1.5rem) 1fr;
-  margin-bottom: 0.75em;
+  -ms-grid-columns: clamp(7em, 30vw, 1.5rem) 1fr;
+      grid-template-columns: clamp(7em, 30vw, 1.5rem) 1fr;
+  margin-bottom: calc(.5 * 1.5em);
   max-width: 50vw;
 }
+
 main .container .date_list_block .item .label {
   font-size: 1.1em;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   color: #797673;
 }
+
 main .container .date_list_block .item p {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 1.1em;
   font-weight: 400;
   margin: 0.5em 0;
   max-width: 38rem;
 }
+
 main .container .date_list_block .item h3 {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   color: #f8f6f5;
   font-size: 1.5em;
   font-weight: 500;
   max-width: 38rem;
 }
+
 main .container .date_list_block .item small {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   color: #797673;
-  font-size: 0.9em;
+  font-size: .9em;
   line-height: 1.5;
 }
+
 main .container .project {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 20em 7em;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 20em 7em;
+      grid-template-rows: 20em 7em;
   grid-auto-columns: 1fr;
   grid-auto-rows: 1fr;
   gap: 1.5em 0;
   grid-auto-flow: row;
-  grid-template-areas: "image" "information";
+      grid-template-areas: "image" "information";
 }
+
 main .container .project .image {
   height: 20em;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
   grid-area: image;
   border-radius: 3px;
 }
+
 main .container .project .information {
   margin-left: 10px;
-  align-self: stretch;
+  -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
   grid-area: information;
 }
+
 main .container .social-button {
   padding: 10px 10px;
   border-radius: 7px;
   background-color: #1f1f21;
   text-decoration: none;
 }
+
 main .container .social-button:hover {
   background-color: rgba(31, 31, 33, 0.93);
+}
+
+main .container .image-grid {
+  display: -ms-grid;
+  display: grid;
 }
 
 #screen_saver {
@@ -267,51 +429,79 @@ main .container .social-button:hover {
   bottom: 0;
   right: 0;
   color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   z-index: 100;
   background-color: #232326;
 }
+
 #screen_saver span[id=korisirbiz] {
   color: #D7D7DB;
   font-size: 14vmin !important;
   font-weight: 500 !important;
   letter-spacing: 2px !important;
 }
+
 #screen_saver .bottom {
   position: absolute;
   bottom: 4vmin !important;
   margin: 5px !important;
 }
+
 #screen_saver a.second {
   color: #A1A1A9 !important;
   font-weight: 500 !important;
   text-decoration: none;
 }
+
 #screen_saver span.first {
   bottom: 6vmin !important;
   color: #D7D7DB !important;
 }
 
 .blur-out {
-  animation: blur-out 0.5s infinite linear both;
+  -webkit-animation: blur-out 0.5s infinite linear both;
+          animation: blur-out 0.5s infinite linear both;
+}
+
+@-webkit-keyframes blur-out {
+  0% {
+    -webkit-filter: blur(0.01px);
+            filter: blur(0.01px);
+  }
+  100% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
 }
 
 @keyframes blur-out {
   0% {
-    filter: blur(0.01px);
+    -webkit-filter: blur(0.01px);
+            filter: blur(0.01px);
   }
   100% {
-    filter: blur(12px);
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
     opacity: 0;
   }
 }
+
 .divider {
   width: 100%;
   height: 2px;
   background-color: #313136;
 }
-
 /*# sourceMappingURL=style.css.map */
